[gd_scene load_steps=6 format=3 uid="uid://bv5qtmvlh4es3"]

[ext_resource type="Script" path="res://src/actor/enemy/Shadhavar/Shadhavar.gd" id="1_ugg1m"]
[ext_resource type="PackedScene" uid="uid://bll1e45xf81rl" path="res://assets/mesh/shadhavar/Scene/shadhavar.tscn" id="2_kgf6e"]

[sub_resource type="SphereShape3D" id="SphereShape3D_06nym"]
radius = 6.0

[sub_resource type="BoxShape3D" id="BoxShape3D_fatpx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bdifx"]
height = 1.67375

[node name="Shadhavar" type="CharacterBody3D"]
collision_layer = 5
collision_mask = 26
script = ExtResource("1_ugg1m")

[node name="body" parent="." instance=ExtResource("2_kgf6e")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="body/Armature" index="0"]
bones/4/rotation = Quaternion(0.0620026, 0.409015, -0.557936, 0.719423)
bones/8/rotation = Quaternion(0.0620027, -0.409015, 0.557936, 0.719423)
bones/18/rotation = Quaternion(0.377832, 6.57878e-13, -2.68368e-13, 0.925874)
bones/19/rotation = Quaternion(-0.405038, 0.0208327, 0.0236869, 0.913756)
bones/20/rotation = Quaternion(0.0551453, -0.0172797, -0.0836184, 0.994821)
bones/29/rotation = Quaternion(0.124035, -0.297717, 0.476244, 0.818029)

[node name="eyebrows" parent="body/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.0016321, -0.943985, -0.0147191, 0.0108632, -0.119403, 0.0305165, -0.00922579, -0.307586, 0.0333273, -0.113967, 0.107758, -0.874614)

[node name="eyes" parent="body/Armature/Skeleton3D" index="2"]
transform = Transform3D(-0.000123222, -0.0364975, 1.0047e-07, 0.03613, -0.000121964, 0.00516651, -0.00516643, 1.75452e-05, 0.0361301, -0.0915804, 0.0815569, -0.843628)

[node name="horns" parent="body/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.018036, -0.0200216, -6.19448e-08, 0.0198204, 0.0178547, 0.00381453, -0.00283411, -0.00255312, 0.0266763, -0.0835213, 0.173052, -0.801574)

[node name="beard" parent="body/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.0400065, 3.0268e-09, -1.70257e-09, -5.87897e-09, 0.0186976, 0.00267367, 4.11819e-09, -0.00267364, 0.0186975, -6.98492e-08, -0.111042, -0.900891)

[node name="horn2" parent="body/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.0355263, -7.82893e-09, 1.58034e-08, -3.08501e-09, 0.028715, 0.0209186, -1.74623e-08, -0.020918, 0.0287148, 1.86265e-08, 0.195577, -0.867898)

[node name="SpottedArea" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -0.000122221, 0, 1, 0, 0.000122221, 0, -1, -0.00738104, 0, 0.0688739)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpottedArea"]
shape = SubResource("SphereShape3D_06nym")

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -0.000122221, 0, 1, 0, 0.000122221, 0, -1, -0.00738104, 0, 0.0688739)
collision_layer = 64
collision_mask = 11

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.200819, -1.34695)
shape = SubResource("BoxShape3D_fatpx")

[node name="StateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00300193, -0.999996, 0, 0.999996, -0.00300193, 0, -0.191414, 0.0628436)
shape = SubResource("CapsuleShape3D_bdifx")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timeout"]

[editable path="body"]
